[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incidentmind"
version = "1.0.0"
description = "IncidentMind: AI-powered SRE incident triage environment for the Meta PyTorch × HuggingFace OpenEnv Hackathon 2026"
requires-python = ">=3.11"
license = { text = "MIT" }

# ── Runtime dependencies ──────────────────────────────────────────────────────
# Amrita reads this to populate server/requirements.txt for the Dockerfile.
# Run: pip install -e ".[dev]" locally.
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",   # Also needed for FastAPI TestClient
]



[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
# Tells setuptools to find incidentmind, server, envs packages automatically
where = ["."]

# ── Amrita: generate server/requirements.txt from here ───────────────────────
# Run this command once all dependencies are finalised:
#   pip install pip-tools
#   pip-compile pyproject.toml --output-file server/requirements.txt
# OR simply:
#   pip freeze > server/requirements.txt  (after pip install -e .)

